# RailController

./: README.md
loco/: main.cpp  wifi_credentials.h
system_core/: CMakeLists.txt  algs.cpp  algs.hpp  autoscan.cpp  autoscan.hpp  cam.cpp  cam.hpp  common.cpp  common.hpp  connection_tester.cpp  dictionary.hpp  hw.cpp  hw.hpp  ip.hpp  main.cpp  main.hpp  memory.cpp  memory.hpp  network.cpp  network.hpp  railstate.cpp  railstate.hpp  remote.cpp  remote.hpp
web_server/: index.php  photo.xml
web_server/assets/css/: main.css
web_server/assets/js/: editor.js  global.js  index.js  state.js  xml.js  xml_import.js
web_server/editor/: index.php
